[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "arxivextract"
version = "0.0.2"
authors = [
    {name = "Kwan Yuet Stephen Ho", email = "stephenhky@yahoo.com.hk"}
]
description = "Extraction of ArXiv articles"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["arXiv", "API", "research"]
requires-python = ">=3.9"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education"
]
dependencies = ["feedparser"]

[project.urls]
Repository = "https://github.com/stephenhky/ArXivExtraction"
Issues = "https://github.com/stephenhky/ArXivExtraction/issues"

[tool.setuptools]
packages = ["arxivextract"]
zip-safe = false

[project.optional-dependencies]
keyword = ['keybert']
test = ["unittest2", "pytest"]
